RESOLVED FIXED153490
Fix build with ENABLE_DEVICE_ORIENTATION on non-iOS platforms
https://bugs.webkit.org/show_bug.cgi?id=153490
Summary Fix build with ENABLE_DEVICE_ORIENTATION on non-iOS platforms
Olivier Blin
Reported 2016-01-26 10:20:01 PST
Build with ENABLE_DEVICE_ORIENTATION is broken on non-iOS platforms: /WebKit/Source/WebCore/history/PageCache.cpp: In function ‘bool WebCore::canCachePage(WebCore::Page&)’: /WebKit/Source/WebCore/history/PageCache.cpp:201:48: error: no matching function for call to ‘WebCore::DeviceMotionController::isActiveAt(WebCore::Page&)’ if (DeviceMotionController::isActiveAt(page)) { ^ In file included from /WebKit/Source/WebCore/history/PageCache.cpp:34:0: /WebKit/Source/WebCore/dom/DeviceMotionController.h:59:17: note: candidate: static bool WebCore::DeviceMotionController::isActiveAt(WebCore::Page*) static bool isActiveAt(Page*); ^ /WebKit/Source/WebCore/dom/DeviceMotionController.h:59:17: note: no known conversion for argument 1 from ‘WebCore::Page’ to ‘WebCore::Page*’ /WebKit/Source/WebCore/history/PageCache.cpp:206:53: error: no matching function for call to ‘WebCore::DeviceOrientationController::isActiveAt(WebCore::Page&)’ if (DeviceOrientationController::isActiveAt(page)) { ^ In file included from /WebKit/Source/WebCore/history/PageCache.cpp:35:0: /WebKit/Source/WebCore/dom/DeviceOrientationController.h:61:17: note: candidate: static bool WebCore::DeviceOrientationController::isActiveAt(WebCore::Page*) static bool isActiveAt(Page*); ^ /WebKit/Source/WebCore/dom/DeviceOrientationController.h:61:17: note: no known conversion for argument 1 from ‘WebCore::Page’ to ‘WebCore::Page*’ This has been broken since r178702, which changed the Page argument from a pointer to a reference in logCanCachePageDecision().
Attachments
Patch (1.89 KB, patch)
2016-01-26 10:30 PST, Olivier Blin
no flags
Olivier Blin
Comment 1 2016-01-26 10:30:20 PST
WebKit Commit Bot
Comment 2 2016-01-26 11:02:49 PST
Comment on attachment 269887 [details] Patch Clearing flags on attachment: 269887 Committed r195601: <http://trac.webkit.org/changeset/195601>
WebKit Commit Bot
Comment 3 2016-01-26 11:02:52 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.