Fix build with ENABLE_DEVICE_ORIENTATION on non-iOS platforms https://bugs.webkit.org/show_bug.cgi?id=153490

Patch by Olivier Blin <olivier.blin@softathome.com> on 2016-01-26
Reviewed by Michael Catanzaro.

This has been broken since r178702, which changed the Page
argument from a pointer to a reference in logCanCachePageDecision().

No new tests since this is a build fix.

* history/PageCache.cpp:
(WebCore::canCachePage):

Canonical link: https://commits.webkit.org/171555@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195601 268f45cc-cd09-0410-ab3c-d52691b4dbfc